--- a/provider-eureka/src/main/resources/application.properties
+++ b/provider-eureka/src/main/resources/application.properties
@@ -2,7 +2,24 @@ server.port=8022
 
 spring.application.name=ucloudlink-provider-eureka
 
-eureka.instance.metadataMap.instanceId=${spring.application.name}:${random.value}
+#eureka.instance.metadataMap.instanceId=${spring.application.name}
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8011/eureka/,http://127.0.0.1:8012/eureka/
 spring.zipkin.base-url=http://localhost:9411
 sample.zipkin.enabled=true
+
+eureka.instance.metadata-map.cluster=MAIN 
+
+eureka.client.healthcheck.enabled=true
+endpoints.shutdown.enabled=true
+endpoints.shutdown.sensitive=true
+
+
+security.user.name=admin
+
+security.user.password=secret
+
+management.security.role=SUPERUSER
+
+spring.boot.admin.url=http://localhost:${server.port}
+spring.jackson.serialization.indent_output=true
+endpoints.health.sensitive=false
