--- a/zuul-server-master/src/main/resources/application.properties
+++ b/zuul-server-master/src/main/resources/application.properties
@@ -5,8 +5,24 @@ spring.application.name=api-gateway
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8011/eureka/,http://127.0.0.1:8012/eureka/
 
 zuul.routes.api.path=/api/**
-#zuul.routes.api-a.serviceId=ucloudlink-provider-eureka
-api.ribbon.listOfServers=127.0.0.1:8022
+zuul.routes.api.serviceId=ucloudlink-provider-eureka
+
+#zuul.routes.api-a.path=/api-a/**
+#zuul.routes.api-a.serviceId=ucloudlink-comsumer-feign
+#api.ribbon.listOfServers=127.0.0.1:8022
 zuul.routes.api.stripPrefix=true
 
-ribbon.eureka.enabled=false
+#ribbon.eureka.enabled=false
+
+#zuul.max.host.connections=5000
+zuul.host.maxTotalConnections=5000
+zuul.host.maxPerRouteConnections=5000
+zuul.semaphore.max-semaphores=5000
+zuul.max.host.socket-timeout-millis=120000
+zuul.max.host.connect-timeout-millis=120000
+
+
+hystrix.command.default.execution.timeout.enabled=false
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=120000
+ribbon.ReadTimeout=120000
+ribbon.ConnectTimeout=120000
